@@ -1,8 +1,8 @@
 sdparm (1.04-0.1) unstable; urgency=low
 
-  * xxxxxxxxxxxxxxxxxx
+  * add SAT ATA Power condition mode page
 
- -- Douglas Gilbert <dgilbert@interlog.org>  Sat, 28 Jun 2008 11:30:00 -0400
+ -- Douglas Gilbert <dgilbert@interlog.org>  Tue, 05 Aug 2008 02:90:00 +0200
 
 sdparm (1.03-0.1) unstable; urgency=low
 
